--- a/kr/index.html
+++ b/kr/index.html
@@ -12,7 +12,7 @@ language: kr
         <div class="header-container">
             <h1>P5X 루페르넷</h1> <span class="beta-text">beta</span>
             <button class="music-control" id="musicControl">
-                <img src="/assets/img/ui/music-off.png" alt="음악 재생" id="musicIcon">
+                <img src="{{ site.baseurl }}/assets/img/ui/music-off.png" alt="음악 재생" id="musicIcon">
             </button>
         </div>
 
@@ -22,48 +22,48 @@ language: kr
                 <div class="menu-card" onclick="location.href='./character/?v=' + APP_VERSION">
                     <div class="card-content">
                         <div class="text-section">
-                            <h2>괴도 <img src="/assets/img/home/icon1.png" alt="괴도 아이콘" class="title-icon"></h2>
+                            <h2>괴도 <img src="{{ site.baseurl }}/assets/img/home/icon1.png" alt="괴도 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">보다 높은 점수, 보다 쉬운 클리어를 위한<br>괴도별 육성 전략을 만나보세요</p>
                             <p class="mobile-description">괴도별 육성 전략을 만나보세요</p>
                             <button onclick="location.href='./character/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="/assets/img/home/1.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/1.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
                 
                 <div class="menu-card" onclick="location.href='./persona/?v=' + APP_VERSION">
                     <div class="card-content">
                         <div class="text-section">
-                            <h2>페르소나 <img src="/assets/img/home/icon2.png" alt="페르소나 아이콘" class="title-icon"></h2>
+                            <h2>페르소나 <img src="{{ site.baseurl }}/assets/img/home/icon2.png" alt="페르소나 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">핵심 페르소나 추천과 더불어<br>각 페르소나에 어울리는 스킬 세팅까지</p>
                             <p class="mobile-description">핵심 페르소나 추천과 스킬 세팅까지</p>
                             <button onclick="location.href='./persona/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="/assets/img/home/2.webp" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/2.webp" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
 
                 <div class="menu-card" onclick="location.href='./revelations/?v=' + APP_VERSION">
                     <div class="card-content">
                         <div class="text-section">
-                            <h2>계시 <img src="/assets/img/home/icon3.png" alt="계시 아이콘" class="title-icon"></h2>
+                            <h2>계시 <img src="{{ site.baseurl }}/assets/img/home/icon3.png" alt="계시 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">계시 정보들을 한 눈에!<br>속성별, 일월성진별 원하는 대로 매칭</p>
                             <p class="mobile-description">계시 정보들을 한 눈에!</p>
                             <button onclick="location.href='./revelations/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="/assets/img/home/3.webp" alt="계시 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/3.webp" alt="계시 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
 
                 <div class="menu-card" onclick="location.href='./tactic/tactic-share.html?v=' + APP_VERSION">
                     <div class="card-content">
                         <div class="text-section">
-                            <h2>택틱 <img src="/assets/img/home/icon4.png" alt="택틱 아이콘" class="title-icon"></h2>
+                            <h2>택틱 <img src="{{ site.baseurl }}/assets/img/home/icon4.png" alt="택틱 아이콘" class="title-icon"></h2>
                             <p class="desktop-description">본인만의 택틱을 만들고 공유하고,<br>바다와 흉몽에서 높은 점수를 쟁취하세요</p>
                             <p class="mobile-description">본인만의 택틱을 만들고 공유하세요</p>
                             <button onclick="location.href='./tactic/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="/assets/img/home/4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -77,27 +77,27 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/아야카.webp" alt="아야카" onclick="location.href='./character/character.html?name=아야카&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/아야카.webp" alt="아야카" onclick="location.href='./character/character.html?name=아야카&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>사카이 아야카</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/후타바.webp" alt="후타바" onclick="location.href='./character/character.html?name=후타바&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/후타바.webp" alt="후타바" onclick="location.href='./character/character.html?name=후타바&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>사쿠라 후타바</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/리코·매화.webp" alt="리코·매화" onclick="location.href='./character/character.html?name=리코·매화&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/리코·매화.webp" alt="리코·매화" onclick="location.href='./character/character.html?name=리코·매화&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>타네무라 리코·매화</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/미오.webp" alt="미오" onclick="location.href='./character/character.html?name=미오&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오" onclick="location.href='./character/character.html?name=미오&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>나츠카와 미오</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무" onclick="location.href='./character/character.html?name=야오링·사자무&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무" onclick="location.href='./character/character.html?name=야오링·사자무&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>리 야오링·사자무</p></div>
                     </div>
                     <div class="character-card">
-                        <div class="character-card-img"><img src="/assets/img/tier/카스미.webp" alt="카스미" onclick="location.href='./character/character.html?name=카스미&v=' + APP_VERSION"></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/카스미.webp" alt="카스미" onclick="location.href='./character/character.html?name=카스미&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>요시자와 카스미</p></div>
                     </div>
 
@@ -114,7 +114,7 @@ language: kr
             <div class="guide-cards">
                 <div class="guide-card">
                     <div class="guide-card-header">
-                        <img src="/assets/img/home/guide1.png" alt="가이드 이미지">
+                        <img src="{{ site.baseurl }}/assets/img/home/guide1.png" alt="가이드 이미지">
                         <h3>도시 생활</h3>
                     </div>
                     <div class="guide-card-content">
@@ -126,7 +126,7 @@ language: kr
                 </div>
                 <div class="guide-card">
                     <div class="guide-card-header">
-                        <img src="/assets/img/home/guide2.png" alt="가이드 이미지">
+                        <img src="{{ site.baseurl }}/assets/img/home/guide2.png" alt="가이드 이미지">
                         <h3>육성 및 재화</h3>
                     </div>
                     <div class="guide-card-content">
@@ -138,7 +138,7 @@ language: kr
                 </div>
                 <div class="guide-card">
                     <div class="guide-card-header">
-                        <img src="/assets/img/home/guide3.png" alt="가이드 이미지">
+                        <img src="{{ site.baseurl }}/assets/img/home/guide3.png" alt="가이드 이미지">
                         <h3>전투 및 팰리스</h3>
                     </div>
                     <div class="guide-card-content">
@@ -200,7 +200,7 @@ language: kr
         musicControl.addEventListener('click', () => {
             if (!isPlaying) {
                 musicPlayer.contentWindow.postMessage('play', '*');
-                musicIcon.src = '/assets/img/ui/music-on.png';
+                musicIcon.src = '{{ site.baseurl }}/assets/img/ui/music-on.png';
                 musicIcon.alt = '음악 중지';
             } else {
                 musicPlayer.contentWindow.postMessage('pause', '*');
@@ -215,7 +215,7 @@ language: kr
             if (event.data === 'playing' || event.data === 'paused') {
                 sessionStorage.setItem('musicState', event.data);
                 isPlaying = event.data === 'playing';
-                musicIcon.src = isPlaying ? '/assets/img/ui/music-on.png' : '/assets/img/ui/music-off.png';
+                musicIcon.src = isPlaying ? '{{ site.baseurl }}/assets/img/ui/music-on.png' : '{{ site.baseurl }}/assets/img/ui/music-off.png';
                 musicIcon.alt = isPlaying ? '음악 중지' : '음악 재생';
             }
         });
