--- a/kr/tactic/tactic-share.html
+++ b/kr/tactic/tactic-share.html
@@ -54,7 +54,7 @@ language: kr
 
         <div class="ranking-container">
             <div class="ranking-header">
-                <img src="/assets/img/tactic-share/rank.png" alt="랭킹" class="ranking-title-icon">
+                <img src="{{ site.baseurl }}/assets/img/tactic-share/rank.png" alt="랭킹" class="ranking-title-icon">
                 <div class="ranking-tabs">
                     <button class="ranking-tab active" data-period="weekly">주간</button>
                     <button class="ranking-tab" data-period="monthly">월간</button>
