--- a/kr/character/index.html
+++ b/kr/character/index.html
@@ -11,7 +11,7 @@ language: kr
 <div class="main-wrapper">
 
     <div class="navigation-path">
-        <script>document.write(`<a href="/kr/?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="{{ site.baseurl }}/kr/?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">괴도</span>
     </div>
