--- a/404.html
+++ b/404.html
@@ -14,6 +14,6 @@
 <body>
     <h1>404</h1>
     <p>이 페이지는 존재하지 않습니다.</p>
-    <p><a href="/">홈으로 돌아가기</a></p>
+    <p><a href="{{ site.baseurl }}/">홈으로 돌아가기</a></p>
 </body>
 </html>
