--- a/kr/character/character.html
+++ b/kr/character/character.html
@@ -5,6 +5,7 @@ custom_js: [cha_detail, tooltip, detail/dot-carousel]
 custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, tooltip.js]
 permalink: /kr/character/character.html
 language: kr
+title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
 ---
 
 
