--- a/kr/character/index.html
+++ b/kr/character/index.html
@@ -4,6 +4,8 @@ custom_css: [character]
 custom_js: []
 custom_data: [/characters/characters.js]
 language: kr
+title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X의 괴도별 육성 가이드
 ---
 
 
