--- a/kr/critical-calc/index.html
+++ b/kr/critical-calc/index.html
@@ -5,6 +5,8 @@ custom_js: [tooltip, critical-calc]
 custom_data: [tooltip.js, calc/boss.js, calc/critical-data.js]
 permalink: /kr/critical-calc/
 language: kr
+title : 크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
 ---
 
 <!-- 메인 컨텐츠 -->
