--- a/kr/defense-calc/index.html
+++ b/kr/defense-calc/index.html
@@ -5,6 +5,8 @@ custom_js: [tooltip, defense-calc]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js]
 permalink: /kr/defense-calc/
 language: kr
+title : 방어력 감소 계산기 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X 방어력 감소 계산기
 ---
 
 <!-- main contents -->
