--- a/kr/persona/index.html
+++ b/kr/persona/index.html
@@ -5,6 +5,8 @@ custom_js: [tooltip]
 custom_data: [wonder/persona.js, tooltip.js, wonder/skills.js]
 permalink: /kr/persona/
 language: kr
+title : 주요 페르소나 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X의 주요 페르소나 정보
 ---
 
 
