--- a/kr/revelations/index.html
+++ b/kr/revelations/index.html
@@ -5,6 +5,8 @@ custom_js: [tooltip]
 custom_data: [revelations/revelations.js, tooltip.js]
 permalink: /kr/revelations/
 language: kr
+title : 계시 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X의 계시 정보
 ---
 
 <!-- Main content -->
