--- a/kr/tactic/tactic-share.html
+++ b/kr/tactic/tactic-share.html
@@ -5,6 +5,8 @@ custom_js: [tooltip, tactic/share, tactic-preview, tactic-share]
 custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /kr/tactic/tactic-share.html
 language: kr
+title : 택틱 대장간 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X 택틱을 자유롭게 공유하세요.
 ---
 
 
