--- a/kr/tier/index.html
+++ b/kr/tier/index.html
@@ -5,6 +5,8 @@ custom_js: []
 custom_data: [characters/characters.js]
 permalink: /kr/tier/
 language: kr
+title: 페르소나5 더 팬텀 X 루페르넷 - 티어 메이커
+description: 본인만의 P5X 티어를 만들어 보세요.
 ---
 
 <link
