--- a/kr/tactic/index.html
+++ b/kr/tactic/index.html
@@ -5,6 +5,8 @@ custom_js: [tooltip, tactic/share, tactic/import, tactic/export, tactic/setparty
 custom_data: [tooltip.js, tactic/pattern.js, characters/characters.js, revelations/revelations.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /kr/tactic/
 language: kr
+title : 택틱 메이커 - 페르소나5 더 팬텀 X 루페르넷
+description: 페르소나5 더 팬텀 X 택틱 메이커
 ---
 
 
