--- a/kr/tactic/tactic-share.html
+++ b/kr/tactic/tactic-share.html
@@ -31,7 +31,7 @@ description: 페르소나5 더 팬텀 X 택틱을 자유롭게 공유하세요.
             <form id="tacticForm">
                 <div class="tacticUrl">
                     <p>공유 URL*</p>
-                    <input type="text" id="tacticUrl" placeholder="https://www.lufel.net/tactic/?data=*" required>
+                    <input type="text" id="tacticUrl" placeholder="https://lufel.net/tactic/?data=*" required>
                 </div>
                 <div class="tacticTitle">
                     <p>제목*</p>
