--- a/kr/character/character.html
+++ b/kr/character/character.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 custom_css: [cha_detail]
-custom_js: [cha_detail, tooltip, detail/dot-carousel]
-custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, tooltip.js]
+custom_js: [cha_detail, tooltip, detail/dot-carousel, marked.min]
+custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, characters/character_operation.js, tooltip.js]
 permalink: /kr/character/character.html
 language: kr
 title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
@@ -234,6 +234,22 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                                 <span class="skill-item"></span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 운영 섹션 -->
+            <div class="setting-group operation-settings">
+                <div class="setting-section">
+                    <h3>추천 운영</h3>
+                    <div class="operation-levels">
+                        <!-- 운영 내용이 여기에 동적으로 추가됨 -->
+                    </div>
+                </div>
+                <div class="setting-section">
+                    <h3>참고사항</h3>
+                    <div class="operation-notes">
+                        <!-- 참고 사항 내용이 여기에 동적으로 추가됨 -->
                     </div>
                 </div>
             </div>
