--- a/kr/index.html
+++ b/kr/index.html
@@ -77,8 +77,8 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/아야카.webp" alt="아야카" onclick="location.href='./character/character.html?name=아야카&v=' + APP_VERSION"></div>
-                        <div class="character-card-text"><p>사카이 아야카</p></div>
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/아케치.webp" alt="아케치" onclick="location.href='./character/character.html?name=아케치&v=' + APP_VERSION"></div>
+                        <div class="character-card-text"><p>아케치 고로</p></div>
                     </div>
                     <div class="character-card">
                         <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/후타바.webp" alt="후타바" onclick="location.href='./character/character.html?name=후타바&v=' + APP_VERSION"></div>
