--- a/kr/index.html
+++ b/kr/index.html
@@ -10,7 +10,7 @@ language: kr
     <div class="main-wrapper">
         <!-- Header (logo, etc.) -->
         <div class="header-container">
-            <h1>P5X 루페르넷</h1> <span class="beta-text">beta</span>
+            <h1>P5X 모르가나넷</h1> <span class="beta-text">beta</span>
             <button class="music-control" id="musicControl">
                 <img src="{{ site.baseurl }}/assets/img/ui/music-off.png" alt="음악 재생" id="musicIcon">
             </button>
@@ -27,7 +27,7 @@ language: kr
                             <p class="mobile-description">괴도별 육성 전략을 만나보세요</p>
                             <button onclick="location.href='./character/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="{{ site.baseurl }}/assets/img/home/1.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/Morgana.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
                 
@@ -39,7 +39,7 @@ language: kr
                             <p class="mobile-description">핵심 페르소나 추천과 스킬 세팅까지</p>
                             <button onclick="location.href='./persona/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="{{ site.baseurl }}/assets/img/home/2.webp" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/Morgana2.png" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
 
@@ -51,7 +51,7 @@ language: kr
                             <p class="mobile-description">계시 정보들을 한 눈에!</p>
                             <button onclick="location.href='./revelations/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="{{ site.baseurl }}/assets/img/home/3.webp" alt="계시 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/Morgana3.png" alt="계시 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
 
@@ -63,7 +63,7 @@ language: kr
                             <p class="mobile-description">본인만의 택틱을 만들고 공유하세요</p>
                             <button onclick="location.href='./tactic/?v=' + APP_VERSION" class="view-more">바로가기 →</button>
                         </div>
-                        <img src="{{ site.baseurl }}/assets/img/home/4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
+                        <img src="{{ site.baseurl }}/assets/img/home/morgana4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
                     </div>
                 </div>
             </div>
