신규 괴도 신규 계시 추가

--- a/kr/defense-calc/index.html
+++ b/kr/defense-calc/index.html
@@ -43,7 +43,7 @@ description: 페르소나5 더 팬텀 X 방어력 감소 계산기
             <div class="penetrate-value">0%</div>
             <div class="penetrate-value-description">
                 <div class="final-defense-coef">최종 방어 계수: <span id="finalDefenseCoef">-</span></div>
-                <div>※ 보스 방어 계수 * (100-관통)%</div>
+                <div>※ 방어 계수 = 보스 방어 계수 × (100-관통)%</div>
             </div>
         </div>
         
@@ -52,7 +52,7 @@ description: 페르소나5 더 팬텀 X 방어력 감소 계산기
             <h2>방어력 감소 합계</h2>
             <div class="total-value">0%</div>
             <div class="total-value-description">
-                <div>대미지 배수 : 1 - [방어력 * 계수 / (방어력+1400) * 계수]</div>
+                <div>대미지 배수 : 1 - [방어력 × 방어 계수 / (방어력+1400) × 방어 계수]</div>
             </div>
         </div>
         
