메인 페이지 변경

--- a/kr/index.html
+++ b/kr/index.html
@@ -77,16 +77,20 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카" onclick="location.href='./character/character.html?name=마나카&v=' + APP_VERSION"></div>
+                        <div class="character-card-text"><p>나가오 마나카</p></div>
+                    </div>
+                    <div class="character-card">
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/이케나미.webp" alt="이케나미" onclick="location.href='./character/character.html?name=이케나미&v=' + APP_VERSION"></div>
+                        <div class="character-card-text"><p>이케나미 쇼키</p></div>
+                    </div>
+                    <div class="character-card">
+                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/마유미.webp" alt="마유미" onclick="location.href='./character/character.html?name=마유미&v=' + APP_VERSION"></div>
+                        <div class="character-card-text"><p>하시모토 마유미</p></div>
+                    </div>
+                    <div class="character-card">
                         <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/아케치.webp" alt="아케치" onclick="location.href='./character/character.html?name=아케치&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>아케치 고로</p></div>
-                    </div>
-                    <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/후타바.webp" alt="후타바" onclick="location.href='./character/character.html?name=후타바&v=' + APP_VERSION"></div>
-                        <div class="character-card-text"><p>사쿠라 후타바</p></div>
-                    </div>
-                    <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/리코·매화.webp" alt="리코·매화" onclick="location.href='./character/character.html?name=리코·매화&v=' + APP_VERSION"></div>
-                        <div class="character-card-text"><p>타네무라 리코·매화</p></div>
                     </div>
                     <div class="character-card">
                         <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오" onclick="location.href='./character/character.html?name=미오&v=' + APP_VERSION"></div>
@@ -96,11 +100,6 @@ language: kr
                         <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무" onclick="location.href='./character/character.html?name=야오링·사자무&v=' + APP_VERSION"></div>
                         <div class="character-card-text"><p>리 야오링·사자무</p></div>
                     </div>
-                    <div class="character-card">
-                        <div class="character-card-img"><img src="{{ site.baseurl }}/assets/img/tier/카스미.webp" alt="카스미" onclick="location.href='./character/character.html?name=카스미&v=' + APP_VERSION"></div>
-                        <div class="character-card-text"><p>요시자와 카스미</p></div>
-                    </div>
-
                 </div>
             </div>
             <div class="recent-update-content">
