--- a/kr/critical-calc/index.html
+++ b/kr/critical-calc/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [critical-calc]
 custom_js: [tooltip, critical-calc]
-custom_data: [tooltip.js, calc/boss.js, calc/critical-data.js]
+custom_data: [tooltip.js, calc/critical-data.js]
 permalink: /kr/critical-calc/
 language: kr
 title : 크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷
@@ -32,62 +32,85 @@ description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
             </div>
         </div>
 
-
-
-        <div class="boss-card card-style">
-            <h2>-</h2>
-            <div class="boss-select-container">
-                <select id="bossSelect">
-                    <option value="">-</option>
-                </select>
-                <div class="boss-stats">
-                    <div>· : <span id="basecritical">-</span></div>
-                    <div>· : <span id="criticalCoef">-</span></div>
+        <!-- 크리티컬 입력 카드 -->
+        <div class="stat-card card-style">
+            <h2>커스텀 크리티컬 확률</h2>
+            <div class="critical-input-container">
+                <div class="critical-input-group">
+                    <label>계시 합계</label>
+                    <input type="number" id="revelationCritical" min="0" step="0.1" value="0">
+                    <span>%</span>
                 </div>
-            </div>
-        </div>
-        
-
-        <div class="damage-card card-style">
-            <h2>-</h2>
-            <div class="damage-increase"></div>
-            <div class="damage-formula">
-                <div class="formula-row">· : <span id="noDefReduce">-</span></div>
-                <div class="formula-row">· : <span id="withDefReduce">-</span></div>
+                <div class="critical-input-group">
+                    <label>해명의 힘</label>
+                    <input type="number" id="explanationPower" min="0" step="0.1" value="0">
+                    <span>%</span>
+                </div>
             </div>
         </div>
     </div>
 
     <!-- 데이터 테이블 -->
-    <div class="critical-table-container card-style">
-        <table class="critical-table">
-            <thead>
-                <tr>
-                    <th class="check-column">선택</th>
-                    <th class="char-img-column">괴도</th>
-                    <th class="char-name-column"></th>
-                    <th class="type-column">분류</th>
-                    <th class="target-column">목표</th>
-                    <th class="skill-icon-column"></th>
-                    <th class="skill-name-column">이름</th>
-                    <th class="option-column">옵션</th>
-                    <th class="value-column">수치</th>
-                    <th class="duration-column">지속시간</th>
-                    <th class="note-column">비고</th>
-                </tr>
-            </thead>
-            <tbody id="criticalTableBody">
-                <!-- JavaScript로 동적 생성됨 -->
-            </tbody>
-        </table>
+    <div class="table-tabs card-style">
+        <div class="tab-buttons">
+            <button class="tab-button active" data-tab="buff">버프</button>
+            <button class="tab-button" data-tab="self">자신</button>
+        </div>
+        
+        <!-- 버프 테이블 -->
+        <div class="tab-content active" id="buff-tab">
+            <table class="critical-table">
+                <thead>
+                    <tr>
+                        <th class="check-column">선택</th>
+                        <th class="char-img-column">괴도</th>
+                        <th class="char-name-column"></th>
+                        <th class="type-column">분류</th>
+                        <th class="target-column">목표</th>
+                        <th class="skill-icon-column"></th>
+                        <th class="skill-name-column">이름</th>
+                        <th class="option-column">옵션</th>
+                        <th class="value-column">수치</th>
+                        <th class="duration-column">지속시간</th>
+                        <th class="note-column">비고</th>
+                    </tr>
+                </thead>
+                <tbody id="buffTableBody">
+                    <!-- JavaScript로 동적 생성됨 -->
+                </tbody>
+            </table>
+        </div>
+
+        <!-- 자신 테이블 -->
+        <div class="tab-content" id="self-tab">
+            <table class="critical-table">
+                <thead>
+                    <tr>
+                        <th class="check-column">선택</th>
+                        <th class="char-img-column">괴도</th>
+                        <th class="char-name-column"></th>
+                        <th class="type-column">분류</th>
+                        <th class="target-column">목표</th>
+                        <th class="skill-icon-column"></th>
+                        <th class="skill-name-column">이름</th>
+                        <th class="option-column">옵션</th>
+                        <th class="value-column">수치</th>
+                        <th class="duration-column">지속시간</th>
+                        <th class="note-column">비고</th>
+                    </tr>
+                </thead>
+                <tbody id="selfTableBody">
+                    <!-- JavaScript로 동적 생성됨 -->
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 
 <script>
-    // 페이지 로드 시 네비게이션 초기화
     document.addEventListener('DOMContentLoaded', () => {
-        Navigation.load('critical-calc', 1); // 현재 페이지에 맞는 active 상태 설정
+        Navigation.load('critical-calc', 1);
         VersionChecker.check();
-
+        new CriticalCalc();
     });
 </script>
