--- a/en/character/index.html
+++ b/en/character/index.html
@@ -4,7 +4,7 @@ custom_css: [character]
 custom_js: []
 custom_data: [/characters/characters.js]
 language: en
-title : Phantom Thief Development Guide - Persona 5 The Phantom X Lufenet
+title : Phantom Thief Development Guide - Persona 5 The Phantom X Lufelnet
 description: Development guide for each Phantom Thief in Persona 5 The Phantom X
 ---
 
