--- a/en/defense-calc/index.html
+++ b/en/defense-calc/index.html
@@ -5,7 +5,7 @@ custom_js: [tooltip, defense-calc]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js]
 permalink: /en/defense-calc/
 language: en
-title : Defense Reduction Calculator - Persona 5 The Phantom X Lufenet
+title : Defense Reduction Calculator - Persona 5 The Phantom X Lufelnet
 description: Persona 5 The Phantom X Defense Reduction Calculator
 ---
 
