--- a/en/index.html
+++ b/en/index.html
@@ -161,7 +161,7 @@ language: en
         </div>
         <div class="footer-container">
             <div class="footer-text">
-                <p>※ Lufenet is an unofficial Persona 5X information site created by an individual. The trademarks and copyrights of the game's content and materials belong to SEGA·ATLUS·Perfect World Games.</p>
+                <p>※ Lufelnet is an unofficial Persona 5X information site created by an individual. The trademarks and copyrights of the game's content and materials belong to SEGA·ATLUS·Perfect World Games.</p>
                 <p>✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@root　<a href="https://forms.gle/Z5SgtSNpSvnprJxAA" style="color: rgb(255, 255, 255, 0.5); text-decoration: underline;" target="_blank">Report and Request</a></p>
                 <p></p>
             </div>
