--- a/en/tactic/tactic-share.html
+++ b/en/tactic/tactic-share.html
@@ -5,7 +5,7 @@ custom_js: [tooltip, tactic/share, tactic-preview, tactic-share]
 custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /en/tactic/tactic-share.html
 language: en
-title : Tactic Forge - Persona 5 The Phantom X Lufenet
+title : Tactic Forge - Persona 5 The Phantom X Lufelnet
 description: Freely share your Persona 5 The Phantom X tactics.
 ---
 
