--- a/en/persona/index.html
+++ b/en/persona/index.html
@@ -5,7 +5,7 @@ custom_js: [tooltip]
 custom_data: [wonder/persona.js, tooltip.js, wonder/skills.js]
 permalink: /en/persona/
 language: en
-title : Main Persona - Persona 5 The Phantom X Lufenet
+title : Main Persona - Persona 5 The Phantom X Lufelnet
 description: Main Persona information for Persona 5 The Phantom X
 ---
 
