--- a/en/revelations/index.html
+++ b/en/revelations/index.html
@@ -5,7 +5,7 @@ custom_js: [tooltip]
 custom_data: [revelations/revelations.js, tooltip.js]
 permalink: /en/revelations/
 language: en
-title : Revelations - Persona 5 The Phantom X Lufenet
+title : Revelations - Persona 5 The Phantom X Lufelnet
 description: Revelation information for Persona 5 The Phantom X
 ---
 
