--- a/en/tactic/index.html
+++ b/en/tactic/index.html
@@ -5,7 +5,7 @@ custom_js: [tooltip, tactic/share, tactic/import, tactic/export, tactic/setparty
 custom_data: [tooltip.js, tactic/pattern.js, characters/characters.js, revelations/revelations.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /en/tactic/
 language: en
-title : Tactic Maker - Persona 5 The Phantom X Lufenet
+title : Tactic Maker - Persona 5 The Phantom X Lufelnet
 description: Persona 5 The Phantom X Tactic Maker
 ---
 
