--- a/en/tier/index.html
+++ b/en/tier/index.html
@@ -5,7 +5,7 @@ custom_js: []
 custom_data: [characters/characters.js]
 permalink: /en/tier/
 language: en
-title: Persona 5 The Phantom X Lufenet - Tier Maker
+title: Persona 5 The Phantom X Lufelnet - Tier Maker
 description: Create your own P5X tier.
 ---
 
